--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<header><header>
+<header>
     <nav class="navbar">
         <div class="brand-logo">
             <i class="fas fa-tools animated-icon"></i> MESA
@@ -38,6 +38,7 @@
         </div>
     </nav>
 </header>
+
 
 <!-Feature req form modal ->
 
