improved logout functionality for admin with alert modal

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -29,17 +29,42 @@
                 <li class="nav-item"><a class="nav-link" href="#contactSec">Contacts Developer</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#addAdmin">Add Admin</a></li>
             </ul>
-            <form th:action="@{/logout}" method="post" class="d-inline">
+            <!-- Your existing logout form (modify the button slightly) -->
+            <form th:action="@{/logout}" method="post" class="d-inline" id="logoutForm">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                <button class="btn btn-primary shadow" type="submit">
+                <button class="btn btn-primary shadow" type="button" data-bs-toggle="modal" data-bs-target="#logoutConfirmModal">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-circle-fill">
                         <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"></path>
                     </svg>&nbsp; &nbsp;Log Out
                 </button>
             </form>
+
         </div>
     </div>
 </nav>
+
+
+
+<!-- Logout Confirmation Modal (Add this anywhere in your HTML, preferably near the end of <body>) -->
+<div class="modal fade" id="logoutConfirmModal" tabindex="-1" aria-labelledby="logoutConfirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="logoutConfirmModalLabel" style="color: black;">Confirm Logout</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="color: black;">
+                Are you sure you want to log out of your account?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmLogoutBtn">Log Out</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <!-Add admin development purpose only->
 
@@ -341,6 +366,24 @@
             }
         });
     }
+
+
+    document.addEventListener('DOMContentLoaded', function() {
+        const logoutForm = document.getElementById('logoutForm');
+        const confirmLogoutBtn = document.getElementById('confirmLogoutBtn');
+
+        if (logoutForm && confirmLogoutBtn) {
+            confirmLogoutBtn.addEventListener('click', function() {
+                // Hide the modal first (optional, but good UX)
+                const logoutModal = bootstrap.Modal.getInstance(document.getElementById('logoutConfirmModal'));
+                if (logoutModal) {
+                    logoutModal.hide();
+                }
+                // Submit the form
+                logoutForm.submit();
+            });
+        }
+    });
 </script>
 
 <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
