--- a/src/main/resources/templates/registrationSuccess.html
+++ b/src/main/resources/templates/registrationSuccess.html
@@ -58,7 +58,7 @@
     <h2>Registration Confirmed</h2>
     <p th:text="${message}"></p>
     <p>Your registration has been successfully processed. An email confirmation with event details has been sent to your registered email address.</p>
-    <a href="/home/" class="btn btn-primary">Return to Homepage</a>
+    <a href="/" class="btn btn-primary">Return to Homepage</a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
